routers-deuteronomy-v2/etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow udp 67 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 67 -j ACCEPT

### tuple ### allow udp 68 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 68 -j ACCEPT

### tuple ### allow any 53 ::/0 any ::/0 DNS - in
-A ufw6-user-input -p tcp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'
-A ufw6-user-input -p udp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'

### tuple ### allow any 5201 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 5201 -j ACCEPT
-A ufw6-user-input -p udp --dport 5201 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
